LOOKS: Ensure scrollbar styling works cross platform

--- a/src/app/units/states/tasks/inbox/directives/staff-task-list/staff-task-list.component.scss
+++ b/src/app/units/states/tasks/inbox/directives/staff-task-list/staff-task-list.component.scss
@@ -1,17 +1,11 @@
 @import "../../../../../../../styles/mixins/task-list.scss";
 @import "../../../../../../../styles/mixins/scrollable.scss";
-
 // @include task-list();
 
 $warn-color: #dd6666;
 
 .scrollable {
-  &:hover {
-    overflow-y: scroll;
-  }
-  overflow: hidden;
   height: 100%;
-  // scrollbar-width: none;
   @include scrollable();
 }
 
